<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">移动信贷</string>
    <string name="strCopyright">湖北省农村信用社</string>
    <string name="strTodo">我的工作台</string>
    <string name="strLoan">贷款审批</string>
    <string name="strReport">报表查询</string>
    <string name="strReportSetting">报表设置</string>
    <string name="strAfterLoan">贷后管理</string>
    <string name="strSys">系统管理</string>
    <string name="strChangePassword">密码修改</string>
    <string name="strBoard">通知公告</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="strOrginalPwd">原始密码</string>
    <string name="strNewPwd1">新密码</string>
    <string name="strNewPwd2">重复新密码</string>
    
    <string name="opt_remember">记住用户号</string>
    <string name="login">登 录</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_pullload_limit">23</string>
    <string name="xlistview_report_limit">10</string>
    <string name="balance">金额</string>
    <string name="count">笔数</string>
    <string name="sum">净增</string>
    <string name="ratio">同比</string>
    <string name="chart_type">选择图表类型</string>
    <string name="bar_chart">柱状图</string>
    <string name="pie_chart">饼图</string>
    <string name="line_chart">线图</string>
    <string name="report_loan_balance">贷款余额结构分布表</string>
    <string name="report_business_survey">信贷产品监测表</string>
    <string name="report_subject_balance">科目余额表</string>
    <string name="report_loan_analysis1">各项贷款分析表一</string>
    <string name="report_loan_analysis2">各项贷款分析表二</string>
    <string name="report_loan_analysis3">各项贷款分析表三</string>
    <string name="report_loan_rate1">贷款收回率统计表(县市排名)</string>
    <string name="report_loan_rate2">贷款收回率统计表(业务品种)</string>
    <string name="report_loan_rate3">贷款收回率统计表(贷款方式)</string>
    <string name="report_loan_rate4">贷款收回率统计表(行业分类)</string>
    <string name="report_report_setting">报表设置</string>
    <string name="strAfterLoanReport">贷后检查报告</string>
    <string name="wait">正在刷新&#8230;</string>
    <string name="net_error">网络连接错误</string>
    <string name="error">数据读取失败</string>
    <string name="empty">没有符合条件的数据</string>
    <string name="empty_org">没有可以查询的机构</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="back">返回</string>
    <string name="submit">提交</string>
    <string name="subscribe_idea">签署意见</string>
    <string name="strLoan_info">贷款申请详细信息</string>
    <string name="custom_info">客户详细信息</string>
    <string name="SERIALNO">申请流水号：</string>
    <string name="CUSTOMERID">客户编号：</string>
    <string name="CUSTOMERNAME">客户名称：</string>
    <string name="CUSTOMERTYPE">客户类型：</string>
    <string name="CERTTYPE">证件类型：</string>
    <string name="CERTID">证件号码：</string>
    <string name="ADD">地址：</string>
    <string name="TEL">联系电话：</string>
    <string name="INDUSTRYTYPE">客户分类：</string>
    <string name="RELATIVETYPE">客户关联人类型：</string>
    <string name="RELATIVETNAME">客户关联人名称：</string>
    <string name="MANAGEUSERNAME">管户人：</string>
    <string name="MANAGEORGNAME">管户机构：</string>
    <string name="INPUTORGNAME">登记机构：</string>
    <string name="INPUTUSERNAME">登记人：</string>
    <string name="INPUTDATE">登记日期：</string>
    <string name="BUSINESSTYPE">业务品种：</string>
    <string name="DIRECTION">行业投向：</string>
    <string name="OCCURTYPE">发生类型：</string>
    <string name="BUSINESSSUM">申请金额：</string>
    <string name="PURPOSE">贷款用途：</string>
    <string name="ISREFERFARMING">是否涉农：</string>
    <string name="TERMMONTH">期限(月)：</string>
    <string name="RATETYPE">利率类型：</string>
    <string name="RATEFLOAT">利率增量：</string>
    <string name="BUSINESSRATE1">执行利率	：</string>
    <string name="VOUCHTYPE">贷款方式：</string>
    <string name="ICTYPE">还款方式：</string>
    <string name="PAYSOURCE">还款来源：</string>
    <string name="OPINIONTYPE">业务类型</string>
    <string name="FLOWNO">流程类型：</string>
    <string name="PHASENO">阶段编号：</string>
    <string name="OBJECTTYPE">对象类型：</string>
    <string name="APPROVEBUSINESSSUM">批准金额：</string>
    <string name="APPROVERATEFLOAT">批准利率增量：</string>
    <string name="APPROVEBUSINESSRATE">批准执行利率：</string>
    <string name="APPROVETERMMONTH">批准期限(月)：</string>
    <string name="PHASECHOICE">意见：</string>
    <string name="PHASEOPINION">意见详情：</string>
    <string name="USERID">用户编号：</string>
    <string name="ORGID">机构编号：</string>
    <string name="SUBMITTYPE">提交类型</string>
    <string name="NEXTUSERID">下一审批人编号</string>
    <string name="NEXTUSERNAME">下一审批人名称</string>
    <string name="NEXTORGID">下一审批人机构编号</string>
    <string name="NEXTORGNAME">下一审批人机构名称</string>
    <string name="NEXTROLEID">下一审批人角色编号</string>
    <string name="NEXTROLENAME">下一审批人角色名称	</string>

    <string name="TODOLOANREQUEST">待处理的贷款申请</string>
    <string name="TODOCUSTOMERQUEST">待处理的客户评级申请</string>
    <string name="TODORETURNEDLOANREQUEST">被退回的贷款申请</string>
    <string name="TODORETURNEDCUSTOMERREQUEST">被退回的客户评级</string>
    <string name="TODOUNCHECKEDLOAN">未作贷后检查的贷款业务</string>
    <string name="TODOIMPORTANTNOTICES">重要通知</string>
    <string name="strInputOrginalPwd">请输入原始密码</string>
    <string name="strInputNewPwd1">请输入新密码</string>
    <string name="strInputNewPwd2">请重复输入新密码</string>
</resources>