<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改密码"
            android:textColor="@color/red"
            android:textSize="23sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strOrginalPwd"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etOrginalPwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:background="@drawable/masi_edit_login"
                    android:hint="@string/strInputOrginalPwd"
                    android:password="true"
                    android:maxLength="40"
                    android:saveEnabled="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strNewPwd1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etNewPwd1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:background="@drawable/masi_edit_login"
                    android:hint="@string/strInputNewPwd1"
                    android:password="true"
                    android:maxLength="40"
                    android:saveEnabled="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strNewPwd2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etNewPwd2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:background="@drawable/masi_edit_login"
                    android:hint="@string/strInputNewPwd2"
                    android:password="true"
                    android:maxLength="40"
                    android:saveEnabled="true" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancle" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submit" />
            </LinearLayout>
        </TableLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="27.0dip"
        android:background="@color/title_color" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/strCopyright"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</LinearLayout>