<?xml version="1.0" encoding="utf-8"?>
<!--  贷款申请详细信息 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp" >
        <TextView
            android:id="@+id/loan_listview_moretitle_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strLoan_info"
            android:textColor="@color/red"
            android:textSize="23sp"
            android:textStyle="bold" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000" />
  	<ScrollView android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
 	  android:scrollbars="none">
	  <RelativeLayout  
	    android:layout_gravity="center_horizontal"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content">

	  	<TextView android:id="@+id/text_serialno"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		style="@style/LoanTitle"
	  		android:layout_marginTop="10dip"
	  		android:text="@string/SERIALNO"/>
	  	<TextView android:id="@+id/text_serialno_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		style="@style/LoanContent"
	  		android:layout_marginTop="10dip"
	  		android:layout_toRightOf="@id/text_serialno"
	  		android:layout_alignBaseline="@id/text_serialno"
	  		android:text="text"/>
	  	
	  	<TextView android:id="@+id/text_customerid_info"
	  	    style="@style/LoanContent"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_serialno_info"
	  		android:layout_alignLeft="@id/text_serialno_info"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_customerid"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/CUSTOMERID"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_customerid_info"
	  		android:layout_toLeftOf="@id/text_customerid_info"/>
	  	
	  	<TextView android:id="@+id/text_customername_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_customerid_info"
	  		android:layout_alignLeft="@id/text_customerid_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_customername"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/CUSTOMERNAME"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_customername_info"
	  		android:layout_toLeftOf="@id/text_customername_info"/>
	  	
	  	<TextView android:id="@+id/text_businesstype_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_customername_info"
	  		android:layout_alignLeft="@id/text_customername_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_businesstype"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/BUSINESSTYPE"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_businesstype_info"
	  		android:layout_toLeftOf="@id/text_businesstype_info"/>
	  	
	  	<TextView android:id="@+id/text_direction_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_businesstype_info"
	  		android:layout_alignLeft="@id/text_businesstype_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>	
	  	<TextView android:id="@+id/text_direction"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/DIRECTION"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_direction_info"
	  		android:layout_toLeftOf="@id/text_direction_info"/>
	  
	  	<TextView android:id="@+id/text_occurtype_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_direction_info"
	  		android:layout_alignLeft="@id/text_direction_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_occurtype"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/OCCURTYPE"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_occurtype_info"
	  		android:layout_toLeftOf="@id/text_occurtype_info"/>
	  	
	  	<TextView android:id="@+id/text_businessum_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_occurtype_info"
	  		android:layout_alignLeft="@id/text_occurtype_info"
	  		style="@style/LoanContent"
	  		android:text="number"/>
	  	<TextView android:id="@+id/text_businessum"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/BUSINESSSUM"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_businessum_info"
	  		android:layout_toLeftOf="@id/text_businessum_info"/>
	  	
	  	<TextView android:id="@+id/text_purpose_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_businessum_info"
	  		android:layout_alignLeft="@id/text_businessum_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_purpose"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/PURPOSE"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_purpose_info"
	  		android:layout_toLeftOf="@id/text_purpose_info"/>
	  	
	  	<TextView android:id="@+id/text_iseferfarming_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_purpose_info"
	  		android:layout_alignLeft="@id/text_purpose_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_iseferfarming"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/ISREFERFARMING"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_iseferfarming_info"
	  		android:layout_toLeftOf="@id/text_iseferfarming_info"/>
	  	
	  	<TextView android:id="@+id/text_termmonth_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_iseferfarming_info"
	  		android:layout_alignLeft="@id/text_iseferfarming_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_termmonth"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/TERMMONTH"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_termmonth_info"
	  		android:layout_toLeftOf="@id/text_termmonth_info"/>
	  	
	  	<TextView android:id="@+id/text_ratetype_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_termmonth_info"
	  		android:layout_alignLeft="@id/text_termmonth_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_ratetype"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/RATETYPE"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_ratetype_info"
	  		android:layout_toLeftOf="@id/text_ratetype_info"/>
	  	
	  	<TextView android:id="@+id/text_ratefloat_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_ratetype_info"
	  		android:layout_alignLeft="@id/text_ratetype_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_ratefloat"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/RATEFLOAT"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_ratefloat_info"
	  		android:layout_toLeftOf="@id/text_ratefloat_info"/>
	  	
	  	<TextView android:id="@+id/text_businessrate_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_ratefloat_info"
	  		android:layout_alignLeft="@id/text_ratefloat_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_businessrate"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/BUSINESSRATE1"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_businessrate_info"
	  		android:layout_toLeftOf="@id/text_businessrate_info"/>
	  	
	  	<TextView android:id="@+id/text_vouchtype_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_businessrate_info"
	  		android:layout_alignLeft="@id/text_businessrate_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_vouchtype"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/VOUCHTYPE"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_vouchtype_info"
	  		android:layout_toLeftOf="@id/text_vouchtype_info"/>
	  	
	  	<TextView android:id="@+id/text_ictype_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_vouchtype_info"
	  		android:layout_alignLeft="@id/text_vouchtype_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_ictype"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/ICTYPE"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_ictype_info"
	  		android:layout_toLeftOf="@id/text_ictype_info"/>
	  	
	  	<TextView android:id="@+id/text_paysource_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_ictype_info"
	  		android:layout_alignLeft="@id/text_ictype_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_paysource"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/PAYSOURCE"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_paysource_info"
	  		android:layout_toLeftOf="@id/text_paysource_info"/>
	  	
	  	<TextView android:id="@+id/text_inputorgname_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_paysource_info"
	  		android:layout_alignLeft="@id/text_paysource_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_inputorgname"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/INPUTORGNAME"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_inputorgname_info"
	  		android:layout_toLeftOf="@id/text_inputorgname_info"/>
	  	
	  	<TextView android:id="@+id/text_inputusername_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_inputorgname_info"
	  		android:layout_alignLeft="@id/text_inputorgname_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_inputusername"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/INPUTUSERNAME"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_inputusername_info"
	  		android:layout_toLeftOf="@id/text_inputusername_info"/>
	  	
	  	<TextView android:id="@+id/text_inputdate_info"
	  		android:layout_width="180dip"
	  		android:layout_height="wrap_content"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/text_inputusername_info"
	  		android:layout_alignLeft="@id/text_inputusername_info"
	  		style="@style/LoanContent"
	  		android:text="text"/>
	  	<TextView android:id="@+id/text_inputdate"
	  		android:layout_width="140dip"
	  		android:layout_height="wrap_content"
	  		android:gravity="right"
	  		android:text="@string/INPUTDATE"
	  		style="@style/LoanTitle"
	  		android:layout_alignTop="@id/text_inputdate_info"
	  		android:layout_toLeftOf="@id/text_inputdate_info"/>

	  </RelativeLayout>
	</ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="27.0dip"
        android:background="@color/title_color" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/strCopyright"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</LinearLayout>
